2005-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* object-internals.h: Added some needed fields from StringBuilder class.
	* marshal.c: Set the maxCapacity when creating a StringBuilder.

2005-01-13  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_System_Environment_Exit): Suspend all managed
	threads before shutting down the runtime.

	* threads.c (mono_thread_suspend_all_other_threads): New helper function.

Thu Jan 13 18:16:35 CET 2005 Paolo Molaro <lupus@ximian.com>

	* object-internal.h, threads.c: implement stacksize and 
	parameterized thread start functionality (requires
	matching corlib). Marked broken code for later removal.

2005-01-12  Martin Baulig  <martin@ximian.com>

	* class-internals.h (MonoGenericClass): Moved the `initialized'
	flag to MonoDynamicGenericClass, removed `init_pending'.
	(MonoGenericInst): Added `is_reference' flag.

2005-01-12  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c (mono_image_create_pefile): Only set the pe_offset
	inside the MSDOS header. Fixes #71201.

	* gc.c (mono_gc_cleanup): Handle the case when this is called from the
	gc thread.
	(mono_domain_finalize): Ditto.

2005-01-12  Martin Baulig  <martin@ximian.com>

	* class.c (mono_get_shared_generic_class): Use the cache for
	non-dynamic generic classes.

	* class-internals.h (mono_class_create_generic_2): Removed
	function prototype, this function is now static inside class.c.

	* class.c (mono_class_create_generic_2): Made this static, only
	call it from mono_class_init() and mono_class_setup_parent().
	(collect_implemented_interfaces_aux): Call mono_class_init() on
	the interfaces we collect.
	(mono_class_setup_vtable): Call mono_class_init (class->parent).

2005-01-11  Zoltan Varga  <vargaz@freemail.hu>

	* threads.c (mono_thread_attach): Call DuplicateHandle on the thread handle on win32 to make
	it a real thread handle.

	* domain-internals.h: Move exvar_offset from MonoJitInfo to 