@@ -5650,6 +5650,21 @@ ves_icall_MonoDebugger_check_runtime_version (MonoString *fname)
 		return NULL;
 }
 
+static MonoBoolean
+custom_attrs_defined_internal (MonoObject *obj, MonoReflectionType *attr_type)
+{
+	MonoCustomAttrInfo *cinfo;
+	gboolean found;
+
+	cinfo = mono_reflection_get_custom_attrs_info (obj);
+	if (!cinfo)
+		return FALSE;
+	found = mono_custom_attrs_has_attr (cinfo, mono_class_from_mono_type (attr_type->type));
+	if (!cinfo->cached)
+		mono_custom_attrs_free (cinfo);
+	return found;
+}
+
 /* icall map */
 typedef struct {
 	const char *method;
@@ -5925,7 +5940,8 @@ static const IcallEntry math_icalls [] = {
 };
 
 static const IcallEntry customattrs_icalls [] = {
-	{"GetCustomAttributesInternal", mono_reflection_get_custom_attrs}
+	{"GetCustomAttributesInternal", mono_reflection_get_custom_attrs},
+	{"IsDefinedInternal", custom_attrs_defined_internal}
 };
 
 static const IcallEntry enuminfo_icalls [] = {
